@@ -1,0 +1,295 @@
+COPYING
+CREDITS
+ChangeLog
+DISTFILES
+Doxyfile
+INSTALL
+Makefile
+README
+README.MingGW
+README.ffmpeg
+README.icons
+SConscript.ffmpeg
+SConstruct
+VERSION
+config.guess
+config.sub
+configure
+configure.in
+debian/README.Debian
+debian/changelog
+debian/compat
+debian/control
+debian/copyright
+debian/dirs
+debian/docs
+debian/menu
+debian/rules
+dvbcut.1
+dvbcut.kdevelop
+dvbcut.kdevelop.filelist
+dvbcut.kdevelop.pcs
+dvbcut.kdevses
+ffmpeg.src/COPYING
+ffmpeg.src/CREDITS
+ffmpeg.src/Changelog
+ffmpeg.src/Makefile
+ffmpeg.src/README
+ffmpeg.src/berrno.h
+ffmpeg.src/configure
+ffmpeg.src/libavcodec/Makefile
+ffmpeg.src/libavcodec/a52dec.c
+ffmpeg.src/libavcodec/ac3.h
+ffmpeg.src/libavcodec/ac3enc.c
+ffmpeg.src/libavcodec/ac3tab.h
+ffmpeg.src/libavcodec/adpcm.c
+ffmpeg.src/libavcodec/adx.c
+ffmpeg.src/libavcodec/allcodecs.c
+ffmpeg.src/libavcodec/alpha/asm.h
+ffmpeg.src/libavcodec/alpha/dsputil_alpha.c
+ffmpeg.src/libavcodec/alpha/dsputil_alpha_asm.S
+ffmpeg.src/libavcodec/alpha/motion_est_alpha.c
+ffmpeg.src/libavcodec/alpha/motion_est_mvi_asm.S
+ffmpeg.src/libavcodec/alpha/mpegvideo_alpha.c
+ffmpeg.src/libavcodec/alpha/regdef.h
+ffmpeg.src/libavcodec/alpha/simple_idct_alpha.c
+ffmpeg.src/libavcodec/armv4l/dsputil_arm.c
+ffmpeg.src/libavcodec/armv4l/dsputil_arm_s.S
+ffmpeg.src/libavcodec/armv4l/dsputil_iwmmxt.c
+ffmpeg.src/libavcodec/armv4l/dsputil_iwmmxt_rnd.h
+ffmpeg.src/libavcodec/armv4l/jrevdct_arm.S
+ffmpeg.src/libavcodec/armv4l/mpegvideo_arm.c
+ffmpeg.src/libavcodec/armv4l/mpegvideo_iwmmxt.c
+ffmpeg.src/libavcodec/armv4l/simple_idct_arm.S
+ffmpeg.src/libavcodec/avcodec.h
+ffmpeg.src/libavcodec/bitstream.c
+ffmpeg.src/libavcodec/bitstream.h
+ffmpeg.src/libavcodec/cabac.c
+ffmpeg.src/libavcodec/cabac.h
+ffmpeg.src/libavcodec/dpcm.c
+ffmpeg.src/libavcodec/dsputil.c
+ffmpeg.src/libavcodec/dsputil.h
+ffmpeg.src/libavcodec/dtsdec.c
+ffmpeg.src/libavcodec/dvbsub.c
+ffmpeg.src/libavcodec/dvbsubdec.c
+ffmpeg.src/libavcodec/dvdata.h
+ffmpeg.src/libavcodec/dvdsub.c
+ffmpeg.src/libavcodec/error_resilience.c
+ffmpeg.src/libavcodec/eval.c
+ffmpeg.src/libavcodec/faandct.c
+ffmpeg.src/libavcodec/faandct.h
+ffmpeg.src/libavcodec/fft.c
+ffmpeg.src/libavcodec/g726.c
+ffmpeg.src/libavcodec/golomb.c
+ffmpeg.src/libavcodec/golomb.h
+ffmpeg.src/libavcodec/h261data.h
+ffmpeg.src/libavcodec/h263.c
+ffmpeg.src/libavcodec/h263data.h
+ffmpeg.src/libavcodec/h263dec.c
+ffmpeg.src/libavcodec/h264data.h
+ffmpeg.src/libavcodec/h264idct.c
+ffmpeg.src/libavcodec/i386/cputest.c
+ffmpeg.src/libavcodec/i386/dsputil_h264_template_mmx.c
+ffmpeg.src/libavcodec/i386/dsputil_mmx.c
+ffmpeg.src/libavcodec/i386/dsputil_mmx_avg.h
+ffmpeg.src/libavcodec/i386/dsputil_mmx_rnd.h
+ffmpeg.src/libavcodec/i386/fdct_mmx.c
+ffmpeg.src/libavcodec/i386/fft_sse.c
+ffmpeg.src/libavcodec/i386/h264dsp_mmx.c
+ffmpeg.src/libavcodec/i386/idct_mmx.c
+ffmpeg.src/libavcodec/i386/idct_mmx_xvid.c
+ffmpeg.src/libavcodec/i386/mmx.h
+ffmpeg.src/libavcodec/i386/motion_est_mmx.c
+ffmpeg.src/libavcodec/i386/mpegvideo_mmx.c
+ffmpeg.src/libavcodec/i386/mpegvideo_mmx_template.c
+ffmpeg.src/libavcodec/i386/simple_idct_mmx.c
+ffmpeg.src/libavcodec/i386/vp3dsp_mmx.c
+ffmpeg.src/libavcodec/i386/vp3dsp_sse2.c
+ffmpeg.src/libavcodec/imgconvert.c
+ffmpeg.src/libavcodec/imgconvert_template.h
+ffmpeg.src/libavcodec/imgresample.c
+ffmpeg.src/libavcodec/jfdctfst.c
+ffmpeg.src/libavcodec/jfdctint.c
+ffmpeg.src/libavcodec/jrevdct.c
+ffmpeg.src/libavcodec/liba52/a52.h
+ffmpeg.src/libavcodec/liba52/a52_internal.h
+ffmpeg.src/libavcodec/liba52/a52_util.h
+ffmpeg.src/libavcodec/liba52/bit_allocate.c
+ffmpeg.src/libavcodec/liba52/bitstream.c
+ffmpeg.src/libavcodec/liba52/bitstream.h
+ffmpeg.src/libavcodec/liba52/crc.c
+ffmpeg.src/libavcodec/liba52/downmix.c
+ffmpeg.src/libavcodec/liba52/imdct.c
+ffmpeg.src/libavcodec/liba52/mm_accel.h
+ffmpeg.src/libavcodec/liba52/parse.c
+ffmpeg.src/libavcodec/liba52/resample.c
+ffmpeg.src/libavcodec/liba52/resample_c.c
+ffmpeg.src/libavcodec/liba52/resample_mmx.c
+ffmpeg.src/libavcodec/liba52/tables.h
+ffmpeg.src/libavcodec/libpostproc/mangle.h
+ffmpeg.src/libavcodec/mdct.c
+ffmpeg.src/libavcodec/mdec.c
+ffmpeg.src/libavcodec/mem.c
+ffmpeg.src/libavcodec/mjpeg.c
+ffmpeg.src/libavcodec/mlib/dsputil_mlib.c
+ffmpeg.src/libavcodec/motion_est.c
+ffmpeg.src/libavcodec/motion_est_template.c
+ffmpeg.src/libavcodec/mpeg12.c
+ffmpeg.src/libavcodec/mpeg12data.h
+ffmpeg.src/libavcodec/mpeg4data.h
+ffmpeg.src/libavcodec/mpegaudio.c
+ffmpeg.src/libavcodec/mpegaudio.h
+ffmpeg.src/libavcodec/mpegaudiodec.c
+ffmpeg.src/libavcodec/mpegaudiodectab.h
+ffmpeg.src/libavcodec/mpegaudiotab.h
+ffmpeg.src/libavcodec/mpegvideo.c
+ffmpeg.src/libavcodec/mpegvideo.h
+ffmpeg.src/libavcodec/msmpeg4.c
+ffmpeg.src/libavcodec/msmpeg4data.h
+ffmpeg.src/libavcodec/opt.c
+ffmpeg.src/libavcodec/opt.h
+ffmpeg.src/libavcodec/parser.c
+ffmpeg.src/libavcodec/pcm.c
+ffmpeg.src/libavcodec/pnm.c
+ffmpeg.src/libavcodec/ppc/dsputil_altivec.c
+ffmpeg.src/libavcodec/ppc/dsputil_altivec.h
+ffmpeg.src/libavcodec/ppc/dsputil_h264_altivec.c
+ffmpeg.src/libavcodec/ppc/dsputil_h264_template_altivec.c
+ffmpeg.src/libavcodec/ppc/dsputil_ppc.c
+ffmpeg.src/libavcodec/ppc/dsputil_ppc.h
+ffmpeg.src/libavcodec/ppc/fdct_altivec.c
+ffmpeg.src/libavcodec/ppc/fft_altivec.c
+ffmpeg.src/libavcodec/ppc/gcc_fixes.h
+ffmpeg.src/libavcodec/ppc/gmc_altivec.c
+ffmpeg.src/libavcodec/ppc/idct_altivec.c
+ffmpeg.src/libavcodec/ppc/mpegvideo_altivec.c
+ffmpeg.src/libavcodec/ppc/mpegvideo_ppc.c
+ffmpeg.src/libavcodec/ps2/dsputil_mmi.c
+ffmpeg.src/libavcodec/ps2/idct_mmi.c
+ffmpeg.src/libavcodec/ps2/mmi.h
+ffmpeg.src/libavcodec/ps2/mpegvideo_mmi.c
+ffmpeg.src/libavcodec/rangecoder.c
+ffmpeg.src/libavcodec/rangecoder.h
+ffmpeg.src/libavcodec/ratecontrol.c
+ffmpeg.src/libavcodec/raw.c
+ffmpeg.src/libavcodec/resample.c
+ffmpeg.src/libavcodec/resample2.c
+ffmpeg.src/libavcodec/sh4/dsputil_align.c
+ffmpeg.src/libavcodec/sh4/dsputil_sh4.c
+ffmpeg.src/libavcodec/sh4/idct_sh4.c
+ffmpeg.src/libavcodec/sh4/qpel.c
+ffmpeg.src/libavcodec/simple_idct.c
+ffmpeg.src/libavcodec/simple_idct.h
+ffmpeg.src/libavcodec/sp5x.h
+ffmpeg.src/libavcodec/sparc/dsputil_vis.c
+ffmpeg.src/libavcodec/sparc/vis.h
+ffmpeg.src/libavcodec/svq1_cb.h
+ffmpeg.src/libavcodec/utils.c
+ffmpeg.src/libavcodec/vc9data.h
+ffmpeg.src/libavcodec/vp3dsp.c
+ffmpeg.src/libavcodec/wmadata.h
+ffmpeg.src/libavcodec/wmv2.c
+ffmpeg.src/libavformat/Makefile
+ffmpeg.src/libavformat/allformats.c
+ffmpeg.src/libavformat/avformat.h
+ffmpeg.src/libavformat/avio.c
+ffmpeg.src/libavformat/avio.h
+ffmpeg.src/libavformat/aviobuf.c
+ffmpeg.src/libavformat/cutils.c
+ffmpeg.src/libavformat/file.c
+ffmpeg.src/libavformat/mpeg.c
+ffmpeg.src/libavformat/mpegts.c
+ffmpeg.src/libavformat/mpegts.h
+ffmpeg.src/libavformat/mpegtsenc.c
+ffmpeg.src/libavformat/os_support.c
+ffmpeg.src/libavformat/os_support.h
+ffmpeg.src/libavformat/utils.c
+ffmpeg.src/libavutil/Makefile
+ffmpeg.src/libavutil/avutil.h
+ffmpeg.src/libavutil/bswap.h
+ffmpeg.src/libavutil/common.h
+ffmpeg.src/libavutil/eval.c
+ffmpeg.src/libavutil/integer.c
+ffmpeg.src/libavutil/integer.h
+ffmpeg.src/libavutil/intfloat_readwrite.c
+ffmpeg.src/libavutil/intfloat_readwrite.h
+ffmpeg.src/libavutil/mathematics.c
+ffmpeg.src/libavutil/mathematics.h
+ffmpeg.src/libavutil/rational.c
+ffmpeg.src/libavutil/rational.h
+icons/bookmark.png
+icons/bookmark.svgz
+icons/chapter.png
+icons/chapter.svgz
+icons/play.png
+icons/play.svgz
+icons/stop.png
+icons/stop.svgz
+import/byteswap.h
+import/stdlib.cpp
+import/stdlib.h
+import/sys/mman.h
+install-sh
+makefile.in
+mingw.sh
+mkinstalldirs
+setversion.sh
+src/Makefile.in
+src/Makefile.w32
+src/SConscript
+src/avframe.cpp
+src/avframe.h
+src/buffer.cpp
+src/buffer.h
+src/busyindicator.h
+src/defines.h
+src/differenceimageprovider.cpp
+src/differenceimageprovider.h
+src/dvbcut.cpp
+src/dvbcut.h
+src/dvbcutbase.ui
+src/eventlistitem.cpp
+src/eventlistitem.h
+src/exception.cpp
+src/exception.h
+src/exportdialog.cpp
+src/exportdialog.h
+src/exportdialogbase.ui
+src/gettext.cpp
+src/gettext.h
+src/imageprovider.cpp
+src/imageprovider.h
+src/index.cpp
+src/index.h
+src/lavfmuxer.cpp
+src/lavfmuxer.h
+src/logoutput.cpp
+src/logoutput.h
+src/main.cpp
+src/mpegmuxer.cpp
+src/mpegmuxer.h
+src/mpgfile.cpp
+src/mpgfile.h
+src/mplayererrorbase.ui
+src/muxer.h
+src/playaudio.cpp
+src/playaudio.h
+src/port.h
+src/progressstatusbar.cpp
+src/progressstatusbar.h
+src/progresswindow.cpp
+src/progresswindow.h
+src/progresswindowbase.ui
+src/psfile.cpp
+src/psfile.h
+src/pts.cpp
+src/pts.h
+src/settings.cpp
+src/settings.h
+src/stream.h
+src/streamdata.cpp
+src/streamdata.h
+src/streamhandle.h
+src/tsfile.cpp
+src/tsfile.h
+src/types.h
